app.css
/* GENERAL STYLING */

body {
    background-color: #191919;
    font-family: "Nunito", sans-serif;
    padding-top: 70px;
}

.sm-icons {
    flex-direction: row;
}

@media only screen and (max-width: 960px) {
    .sm-icons .nav-item {
        padding-right: 1em;
    }
}

/* INDEX PAGE */

#frontDesign h1 {
    font-weight: 100;
    font-size: 3.5vw;

}

#frontDesign {
    margin: none;
    scrollbar-gutter: none;
    background-color: #191919;
}

@media (max-width: 960px) {
    #frontDesign h1 {
        font-size: 2.5em;
    }
}

/* CONTACT US PAGE */

#contactPage h1 {
    font-size: 1.5em;
}

#contactPage h2 {
    font-size: 1.5em;
}


#contactForm .form-control {
    border-radius: 20px;
}

#contactForm .btn {
    border-radius: 30px;
    font-size: 1.2em;
}

/* FOOTER */

#footerLinks a {
    color: rgb(125, 125, 125);
}

